# openaudiosearch

./: .dockerignore  .env  .gitignore  .tmuxinator.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-core  Dockerfile-worker  README.md  docker-compose.dev.yml  docker-compose.nightly.yml  docker-compose.yml  environment.yml  ocypod.toml  open-audio-search.py  requirements.txt  setup.py  transcribe_torch.py  transcribe_vosk.py
.github/workflows/: ci.yml  dockerhub-core.yml  dockerhub-worker.yml  dockerhub.yml  docs.yml  publish.yml
book/: 404.html  architecture.html  development.html  elastic.html  ffmpeg.html  notes.html  print.html  searchindex.js  searchindex.json  user.html
config/: jobs.toml  mapping.toml  ocypod.toml
docker/ocypod/: Dockerfile
docker/test/: README.md  docker-compose.yml
docs/: SUMMARY.md  architecture.md  book.toml  development.md  elastic.md  ffmpeg.md  install.md  notes.md  user.md
examples/: vosk-example.py
frontend/: .gitignore  Dockerfile  README.md  babel.config.js  index.html  package.json  vite.config.js  webpack.config.js
frontend/src/: app.js  app.jsx  index.html  index.js  main.jsx  routes.jsx  theme.js
oas-common/: Cargo.toml
oas-common/src/: lib.rs  mapping.rs  record.rs  reference.rs  resolver.rs  util.rs
oas-common/src/types/: audio_object.rs  feed.rs  media.rs  mod.rs  post.rs
oas-core/: Cargo.toml
oas-core/src/: celery.rs  couch.rs  couch_full.rs  elastic.rs  lib.rs  rss.rs  server.rs  util.rs
oas-core/src/couch/: changes.rs  error.rs  mod.rs  types.rs
oas-core/src/rss/: error.rs  manager.rs  mod.rs  ops.rs  runner.rs
oas-core/src/rss/crawlers/: mod.rs
oas-core/src/server/: error.rs  mod.rs
oas-core/src/server/handlers/: feed.rs  legacy.rs  media.rs  mod.rs  record.rs  records.rs  search.rs
oas-core/src/tasks/: mod.rs
oas_core/: .env.default  celery-test.py  celeryconfig.py  cli.py  debug.py  environment.yml  pyproject.toml  server.py  setup.py  start-server.sh  task-queue.py  task-run.py  task-status.py  worker.py
oas_core/app/: celery.py  config.py  worker.py
oas_core/app/core/: celery.py  cli_util.py  job.py  redis.py  util.py
oas_core/app/elastic/: frn_importer.py  search.py  search_new.py  search_old.py
oas_core/app/elastic/configs/: index_configs.py
oas_core/app/importer/: feed.py  frn_importer.py  rss.py
oas_core/app/server/: api.py  jobs.py  main.py  models.py
oas_core/app/store/: couch.py
oas_core/app/tasks/: celery-test.py  download_models.py  downloads.py  main.py  models.py  spacy_pipe.py  tasks.py  transcribe_vosk.py
oas_core/scripts/: couch_store_examples.py
oas_worker/: Dockerfile  README.md  download_models.py  evaluate_devset.py  mypy.ini  pyproject.toml  serve_nlp_devset.sh  start-celery.sh  start-worker-docker.sh  start-worker.sh  worker.py
oas_worker/app/: bin.py  client.py  config.py  logging.py  util.py  worker.py
oas_worker/app/examples/: example.py
oas_worker/app/jobs/: evaluate.py  jobs.py  recasepunc.py  spacy_pipe.py  transcribe_nemo.py  transcribe_pykaldi.py  transcribe_vosk.py
oas_worker/app/jobs/asr/: voice.py
oas_worker/app/jobs/knowledgebase/: knowledgebase.py
oas_worker/app/jobs/naive-ned/: naive_ned.py
oas_worker/app/jobs/naive_ned/: naive_ned.py
oas_worker/app/jobs/recasepunc/: recasepunc.py
oas_worker/app/tasks/: models.py  spacy_pipe.py  tasks.py  transcribe_vosk.py
oas_worker/devset/: README.md  evaluate_devset_utils.py  generate_devset.py  http_server.py  rss.xml  serve_nlp_devset.sh  transcript_word_frequencies.py
oas_worker/devset/assets/: Devset.csv  rss.xml
oas_worker/examples/: example-worker.py  nlp.py  punctuate.py
oas_worker/scripts/: elastic-disable-threshold.sh
python/app/: celery.py  faktory_tasks.py
rust/: .gitignore  README.md  docker-compose.yml
rust/oas-common/: Cargo.toml
rust/oas-common/src/: guid.rs  jobs.rs  lib.rs  mapping.rs  record.rs  record_map.rs  reference.rs  resolver.rs  ser.rs  task.rs  util.rs
rust/oas-common/src/record/: error.rs  meta.rs  traits.rs  typed.rs  untyped.rs
rust/oas-common/src/types/: any.rs  feed.rs  media.rs  mod.rs  post.rs
rust/oas-core/: Cargo.toml  build.rs
rust/oas-core/src/: config.rs  elastic.rs  lib.rs  runtime.rs  store.rs  util.rs
rust/oas-core/src/couch/: changes.rs  durable_changes.rs  error.rs  manager.rs  mod.rs  resolver.rs  store.rs  table.rs  types.rs
rust/oas-core/src/index/: config.rs  elastic.rs  error.rs  index.rs  manager.rs  mod.rs  post_index.rs
rust/oas-core/src/jobs/: argfuns.rs  bin.rs  changes.rs  config.rs  mod.rs  ocypod.rs  typs.rs
rust/oas-core/src/jobs/argfuns/: defaults.rs
rust/oas-core/src/rss/: error.rs  manager.rs  mapping.rs  mod.rs  ops.rs
rust/oas-core/src/rss/crawlers/: mod.rs
rust/oas-core/src/server/: error.rs  mod.rs  proxy.rs  static_dir.rs
rust/oas-core/src/server/auth/: basic_auth.rs  mod.rs  password.rs  sessions.rs  store.rs  structs.rs
rust/oas-core/src/server/handlers/: changes.rs  feed.rs  job.rs  media.rs  mod.rs  post.rs  record.rs  search.rs  task.rs  transcribe.rs
rust/oas-core/src/store/: structs.rs  table.rs  transaction.rs
rust/oas-core/src/tasks/: changes.rs  mod.rs  taskdefs.rs
rust/oas-exp/: Cargo.toml
rust/oas-exp/src/: cache.rs  index.rs  inventory.rs  lib.rs  main.rs  meta.rs  protocol.rs  record.rs  schema.rs  server.rs  store.rs  uuid.rs
rust/oas-exp/src/record/: meta.rs
rust/oas-exp/src/store/: structs.rs  table.rs  transaction.rs
rust/python/: faktory-worker.py  pyproject.toml  start-faktory.sh
rust/python/app/: celery.py  models.py
rustdocs/: crates.js  search-index.js  settings.html  source-files.js
rustdocs/oas/: all.html  constant.DEFAULT_FRONTEND_PROXY.html  constant.VAR_FRONTEND_PROXY.html  constant.VAR_LOG.html  enum.Command.html  enum.FeedCommand.html  fn.main.html  fn.run_all.html  (+19 more)
scripts/: evaluate_keywords.py  generate_devset.py  pyproject.toml  run_elastic_hq.sh  transcript_word_frequencies.py
scripts/devset/: Devset.csv  Devset.ods  transcript_word_frequencies.py
scripts/rest-examples/: README.md  crud.http  jobs.http  search.http
(+396 files in other folders)
