[package]
name = "oas-core"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"
default-run = "oas"

[[bin]]
name = "oas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oas-common = { path = "../oas-common" }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
surf = "2.2.0"
anyhow = "1.0.40"
serde = "1.0.126"
serde_json = "1.0.64"
base64 = "0.13.0"
futures = "0.3.15"
clap = "3.0.0-beta.2"
thiserror = "1.0.25"
log = "0.4.14"
elasticsearch = { version = "7.12.0-alpha.1", features = ["rustls-tls"] }
url = "2.2.2"
http = "0.2.4"
env_logger = "0.8.3"
# celery = { git = "https://github.com/rusty-celery/rusty-celery.git", branch = "main" }
celery = { path = "../../rusty-celery" }
async-trait = "0.1.50"
# elastic = "0.21.0-pre.5"
# elastic_derive = "0.21.0-pre.5"
tokio = { version = "1.0.0", features = ["full"]}
faktory = "0.11.1"
rss = "1.10.0"
base32 = "0.4.0"
sha2 = "0.9.5"
