[tool.poetry]
name = "oas_worker"
version = "0.1.0"
description = "Open Audio Search core engine and server"
authors = ["Open Audio Search team"]
license = "APGL-3.0"

[tool.poetry.dependencies]
python = "3.7.0"
setuptools = "^54.2.0"
requests = "^2.25.1"
jiwer = "^2.2.0"
spacy = "^3.2"
pytextrank = "^3.0.5"
scipy = "^1.6.0"
wget = "^3.2"
vosk = "^0.3.30"
loguru = "^0.5.3"
httpx = "^0.18.1"
mpire = "^2.3.0"
recasepunc = { git = "https://github.com/openaudiosearch/recasepunc.git", branch = "oas2" }
pandas = "^1.1.5"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
