[tool.poetry]
name = "oas_scripts"
version = "0.1.0"
description = ""
authors = ["OAS contributors"]
license = "APGL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.1"
pandas = "^1.3.4"
bs4 = "^0.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
