[package]
name = "oas-exp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "record"
path = "src/bin/record.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
axum = "0.4.0"
bytes = "1.0.1"
chrono = { version = "0.4.19", features=["serde"] }
futures = "0.3.15"
futures-batch = "0.6.0"
futures-timer = "3.0.2"
reqwest = { version = "0.11.4", default_features = false, features = ["stream", "rustls-tls"] }
schemars = { version = "0.8.8", features = ["uuid", "chrono"] }
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.30"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "signal"]}
tokio-stream = { version = "0.1.6", features = ["io-util"] }
tracing = "0.1.29"
tracing-attributes = "0.1.18"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
anyhow = "1.0.51"
erased-serde = "0.3.16"
oas-common = { path = "../oas-common" }
uuid = { version = "0.8.2", features = ["v4", "v5", "serde"] }
