[tool.poetry]
name = "oas-py"
version = "0.1.0"
description = ""
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
redis = "^3.5.3"
faktory = "^0.5.1"

[tool.poetry.dev-dependencies]
celery = "^5.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
